# travel-tracker

./: .dockerignore  .env.example  .gitignore  .gitignore.docker  CODE_REVIEW_GUIDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_DESIGN.md  DESIGN_DOC_FILES_OPERATION.md  DESIGN_DOC_FILES_OPERATION_REVIEW.md  DESIGN_DOC_IMAGE_PINNING_ON_MAP.md  IMAGE_PINNING_IMPLEMENTATION.md  IMPLEMENTATION_REVIEW_AND_PLAN.md  IMPLEMENTATION_SUMMARY.md  MINIO_BUCKET_REVIEW.md  QUICK_START.md  README.md  README_BACKEND_DB.md  README_DEVOPS.md  README_DEV_PRINCIPLE.md  README_FRONTEND.md  README_INTEGRATION.md  RIVER_REDRAW_ANALYSIS.md  TEST_RESULTS_20251030.md  UI_LAYOUT_ANALYSIS.md  build.sh  deploy.sh  docker-compose.build.yml  docker-compose.dbonly.yml  docker-compose.prod.yml  docker-compose.yml  start-dev.sh  stop-dev.sh
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg
server/docs/: Makefile  api_workflows.rst  backend_logic.rst  conf.py  index.rst  overview.rst  requirements.txt
server/docs/api/: app.rst  auth.rst  controllers.rst  events.rst  index.rst  models.rst  routes.rst  services.rst  utils.rst
server/src/: app.py  auth.py  config.py  dependencies.py
server/src/controllers/: file_upload_controller.py  map_controller.py  trip_controller.py
server/src/events/: event_bus.py
server/src/models/: __init__.py  annotations.py  dashboard.py  file_metadata.py  gis_map_request.py  map_request.py  plan.py  search.py  trip.py  user.py
server/tests/: conftest.py  test_auth.py  test_events.py  test_routes.py
(+243 files in other folders)
