[metadata]
name = travel-tracker-backend
version = 0.1.0
description = Backend for the Travel Tracker application
author = Your Name
author_email = your.email@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/travel-tracker-backend
project_urls =
    Bug Tracker = https://github.com/yourusername/travel-tracker-backend/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    Flask
    Flask-SQLAlchemy
    Flask-Migrate
    Flask-SocketIO
    Flask-Cors
    python-dotenv
    requests

[options.extras_require]
dev =
    pytest
    black
    flake8

[options.packages.find]
where = src